rust/libdnf-sys/cxx/libdnf.hpp

/* -*- mode: C; c-file-style: "gnu"; indent-tabs-mode: nil; -*-
 *
 * Copyright (C) 2021 Red Hat, Inc.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Lesser General Public License as published
 * by the Free Software Foundation; either version 2 of the licence or (at
 * your option) any later version.
 *
 * This library is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General
 * Public License along with this library; if not, write to the
 * Free Software Foundation, Inc., 59 Temple Place, Suite 330,
 * Boston, MA 02111-1307, USA.
 */

#pragma once

#include <gio/gio.h>
#include <libdnf/libdnf.h>

#include "rust/cxx.h"

namespace dnfcxx
{
typedef ::DnfPackage DnfPackage;
rust::String dnf_package_get_nevra (DnfPackage &pkg);
rust::String dnf_package_get_name (DnfPackage &pkg);
rust::String dnf_package_get_evr (DnfPackage &pkg);
rust::String dnf_package_get_arch (DnfPackage &pkg);

typedef ::DnfRepo DnfRepo;
rust::String dnf_repo_get_id (DnfRepo &repo);
guint64 dnf_repo_get_timestamp_generated (DnfRepo &repo);
}